# mqproxy

./: .clang-format  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  NOTICE  README.md  client.conf.example  server.conf.example
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  gitleaks.yml  perf-weekly.yml  perf.yml  release.yml
cli/: main.c
cmake/: BuildSetup.cmake
docs/report/: 2026-06-13-block-vs-relay-h3-over-multipath.md  2026-06-23-single-tcp-aggregation-mqvpn-vs-mqproxy.md
docs/report/bench_results/: 2026-06-13-full-matrix-release.csv  2026-06-23-single-tcp-aggregation.csv
fuzz/: .gitignore  CMakeLists.txt  README.md  fuzz_clienthello.c  fuzz_http_connect.c  fuzz_socks5_feed.c  fuzz_socks5_udp_hdr.c  fuzz_udp_msg_hdr.c  fuzz_varint.c  fuzz_wire_auth_req.c  fuzz_wire_auth_resp.c  fuzz_wire_connect_tcp_req.c  fuzz_wire_connect_tcp_resp.c  fuzz_wire_udp_session_open.c  fuzz_wire_udp_session_resp.c
fuzz/corpus/http_connect/: connect
fuzz/corpus/socks5_feed/: greeting_connect_v4
fuzz/corpus/socks5_udp_hdr/: v4
fuzz/corpus/udp_msg_hdr/: min
fuzz/corpus/wire_auth_req/: maxlen  min
fuzz/corpus/wire_auth_resp/: err  ok
fuzz/corpus/wire_connect_tcp_req/: domain  ipv4
fuzz/corpus/wire_connect_tcp_resp/: err
fuzz/corpus/wire_udp_session_open/: ipv4
fuzz/corpus/wire_udp_session_resp/: ok
fuzz/scripts/: gen_wire_seeds.c
packaging/: postinst  postrm
packaging/systemd/: mqproxy-client@.service.in  mqproxy-server@.service.in
packaging/sysusers.d/: mqproxy.conf
packaging/tmpfiles.d/: mqproxy.conf
scripts/: build-h3-curl.sh  build-xquic.sh
scripts/ci_benchmarks/: bench_common.sh  bench_gateway_load.sh  bench_mitm_overhead.sh  bench_origin_server.go  bench_proxy_overhead.sh  ci_bench_env.sh  ci_bench_mitm.sh  ci_bench_multi_stream.sh  ci_bench_tcp_proxy.sh  perf_gate.sh  plot_single_tcp.py  plot_single_tcp_simple.py
scripts/ci_publish/: publish_to_r2.sh
src/config/: mq_config.c  mq_config.h
src/gateway/: mq_fetch_listener.c  mq_fetch_listener.h  mq_gw_cache.c  mq_gw_cache.h  mq_gw_client.c  mq_gw_client.h  mq_gw_fetch_adapter.c  mq_gw_fetch_adapter.h  mq_gw_h2_adapter.c  mq_gw_h2_adapter.h  mq_gw_h2_submit_gwc.c  mq_gw_headers.c  mq_gw_headers.h  mq_gw_intake.h  mq_gw_metrics.c  mq_gw_metrics.h  mq_gw_server.c  mq_gw_server.h  mq_http1.c  mq_http1.h  mq_origin_curl.c  mq_origin_curl.h
src/ingress/: mq_clienthello.c  mq_clienthello.h  mq_http_connect.c  mq_http_connect.h  mq_ingress.h  mq_listener.c  mq_listener.h  mq_origdst.c  mq_origdst.h  mq_socks5.c  mq_socks5.h  mq_tproxy.c  mq_tproxy.h  mq_tproxy_setup.c  mq_tproxy_setup.h  mq_udp_assoc.c  mq_udp_assoc.h
src/mitm/: mq_ignore_hosts.c  mq_ignore_hosts.h  mq_mitm_conn.c  mq_mitm_conn.h  mq_mitm_core.c  mq_mitm_core.h
src/proxy/: mq_client.c  mq_client.h  mq_defrag.c  mq_defrag.h  mq_flow.c  mq_flow.h  mq_framebuf.c  mq_framebuf.h  mq_relay.c  mq_relay.h  mq_server.c  mq_server.h  mq_udp_session.c  mq_udp_session.h
src/runtime/: mq_runtime_libevent.c  mq_runtime_libevent.h
src/transport/: mq_conn.c  mq_conn.h  mq_engine.c  mq_engine.h  mq_h3.c  mq_h3.h  mq_path.c  mq_path.h  mq_stream.c  mq_stream.h  mq_stream_internal.h  mq_transport.c  mq_transport.h
src/util/: mq_backoff.c  mq_backoff.h  mq_buf.c  mq_buf.h  mq_ct.h  mq_log.c  mq_log.h
src/wire/: mq_udp_msg.c  mq_udp_msg.h  mq_varint.c  mq_varint.h  mq_wire.c  mq_wire.h
tests/: mqtest.h  nghttp2_link_probe.c  test_backoff.c  test_buf.c  test_cli_help.sh  test_clienthello.c  test_config.c  test_defrag.c  test_gw_cache.c  test_gw_h2_adapter.c  test_gw_headers.c  test_gw_req_format.c  test_h3_req_stats.c  test_http1.c  test_http_connect.c  test_ignore_hosts.c  test_max_conns.c  test_metrics_format.c  test_mitm_conn.c  test_mitm_core.c  test_mitm_teardown.c  test_origdst.c  test_relay.c  test_sched.c  test_smoke.c  test_socks5.c  test_udp_msg.c  test_varint.c  test_wire.c
tests/certs/: origin.crt  origin.key  test.crt  test.key
tests/integration/: bench_ab_lanes.sh  bench_single_tcp_aggregation.sh  check_boringssl_isolation.sh  e2e_gateway.sh  e2e_mitm_h2.sh  e2e_mitm_smoke.sh  e2e_multipath.sh  e2e_tproxy.sh  e2e_udp.sh  mitm_smoke_server.c  test_bench_common.sh  test_client_reconnect.c  test_client_server.c  test_conn_handshake.c  test_datagram_fabric.c  test_e2e_single_path.c  test_engine_boot.c  test_gw_client.c  test_gw_reconnect.c  test_gw_relay.c  test_gw_server.c  test_h3_fabric.c  test_max_conns_e2e.c  test_metrics_active_conn.c  test_path_bind.c  test_perf_gate.sh  test_qlog_blocked.c  test_socks5_listener.c  test_transport_fabric.c  test_two_paths.c  test_udp_relay.c  udp_echo.c  udpsocks.c
tests/packaging/: verify_install.sh
website/: .gitignore  README.md  index.md  package-lock.json  package.json
website/.vitepress/config/: en.ts  index.ts  ja.ts
website/.vitepress/theme/composables/: usePerfData.ts
website/benchmarks/: index.md
website/guide/: building.md  configuration.md  http-gateway.md  installation.md  introduction.md  quick-start.md  resilience.md  tcp-proxy.md  tls-mitm.md  transparent-capture.md  udp-relay.md
website/ja/: index.md
website/ja/benchmarks/: index.md
website/ja/guide/: building.md  configuration.md  http-gateway.md  installation.md  introduction.md  quick-start.md  resilience.md  tcp-proxy.md  tls-mitm.md  transparent-capture.md  udp-relay.md
website/ja/reference/: observability.md  options.md  security-model.md
website/reference/: observability.md  options.md  security-model.md
